--- a/public/index.html
+++ b/public/index.html
@@ -9,42 +9,52 @@
     <link rel="apple-touch-icon" href="icon-192.png">
     <link rel="manifest" href="manifest.json">
     <style>
-        :root { --primary-bg: #121212; --secondary-bg: #1a1a1a; --text-color: #d1d1d1; --logo-red: #D32F2F; --logo-green: #388E3C; --border-color: #333; --ping-good: #4CAF50; --ping-medium: #FFC107; --ping-bad: #F44336; }
-        html { height: 100%; box-sizing: border-box; }
-        *, *:before, *:after { box-sizing: inherit; }
-        body { background-color: var(--primary-bg); color: var(--text-color); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; text-align: center; margin: 0; display: flex; flex-direction: column; align-items: center; min-height: 100%; }
-        .main-wrapper { width: 100%; max-width: 700px; padding: 15px 10px; display: flex; flex-direction: column; flex-grow: 1; }
-        .header { margin-bottom: 15px; flex-shrink: 0; }
-        .header img { width: 90px; height: 90px; }
-        .slogan { font-size: 0.85em; color: #aaa; margin-top: 8px; font-style: italic; }
-        .status-bar { font-size: 0.8em; color: #888; margin-bottom: 15px; min-height: 1em; }
-        .container { width: 100%; background-color: var(--secondary-bg); padding: 15px; border-radius: 10px; box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); margin-bottom: 15px; }
-        .core-section { margin-bottom: 20px; }
+        :root {
+            --primary-bg: #121212; --secondary-bg: #1e1e1e; --text-color: #e0e0e0;
+            --logo-red: #D32F2F; --logo-green: #388E3C; --border-color: #2e2e2e;
+            --action-blue: #007bff; --action-blue-hover: #0056b3; --action-gray: #333;
+            --ping-good: #4CAF50; --ping-medium: #FFC107; --ping-bad: #F44336;
+        }
+        body { background-color: var(--primary-bg); color: var(--text-color); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; text-align: center; margin: 0; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
+        .main-wrapper { width: 100%; max-width: 700px; padding: 15px; }
+        .header { margin-bottom: 20px; }
+        .header img { width: 100px; height: 100px; }
+        .slogan { font-size: 0.9em; color: #aaa; margin-top: 10px; }
+        .status-bar { font-size: 0.8em; color: #888; margin-bottom: 20px; min-height: 1em; }
+        .container { width: 100%; background-color: var(--secondary-bg); padding: 20px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); margin-bottom: 20px; }
+        .core-section { margin-bottom: 25px; }
         .core-section:last-child { margin-bottom: 0; }
-        .core-header { color: white; padding: 12px; border-radius: 8px; font-size: 1.2em; font-weight: bold; margin-bottom: 15px; }
-        #xray-header { background-color: var(--logo-red); }
-        #singbox-header { background-color: var(--logo-green); }
-        .action-button, .test-button { background-color: #007bff; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1em; width: 100%; transition: background-color 0.2s; }
-        .test-button { margin-bottom: 15px; }
-        .action-button:disabled, .test-button:disabled { background-color: #555; cursor: not-allowed; }
-        .action-group { border: 1px solid var(--border-color); border-radius: 8px; padding: 12px; margin-top: 15px; }
-        .action-buttons { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
+        .core-header { color: white; padding: 15px; border-radius: 10px; font-size: 1.3em; font-weight: bold; margin-bottom: 20px; }
+        #xray-header { background: linear-gradient(135deg, #c31432, #240b36); }
+        #singbox-header { background: linear-gradient(135deg, #159957, #155799); }
+        .test-button { background: var(--action-blue); color: white; border: none; padding: 12px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1em; width: 100%; transition: all 0.3s ease; display: inline-flex; justify-content: center; align-items: center; gap: 8px; }
+        .test-button:hover { background-color: var(--action-blue-hover); transform: translateY(-2px); }
+        .test-button:disabled { background-color: #555; cursor: not-allowed; transform: none; }
+        .loader { width: 16px; height: 16px; border: 2px solid #fff; border-bottom-color: transparent; border-radius: 50%; display: inline-block; animation: rotation 1s linear infinite; }
+        @keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        .action-group-title { color: #ccc; font-size: 0.9em; font-weight: bold; text-align: right; margin: 25px 0 10px 0; padding-bottom: 5px; border-bottom: 1px solid var(--border-color); }
+        .action-box { display: flex; justify-content: space-between; align-items: center; background-color: var(--action-gray); padding: 10px; border-radius: 8px; margin-bottom: 10px; }
+        .action-box-label { font-size: 0.9em; font-weight: 500; }
+        .action-box-buttons { display: flex; gap: 8px; }
+        .action-btn-small { background-color: #444; border: 1px solid #555; color: var(--text-color); padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.8em; transition: background-color 0.2s; }
+        .action-btn-small:hover { background-color: #555; }
         .protocol-group { border-top: 1px solid var(--border-color); }
-        .protocol-header { background-color: transparent; padding: 12px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; font-weight: bold; }
-        .toggle-icon { display: inline-block; width: 6px; height: 6px; border-bottom: 2px solid var(--text-color); border-right: 2px solid var(--text-color); transform: rotate(45deg); transition: transform 0.3s; margin-left: 10px; }
-        .protocol-group.open .toggle-icon { transform: rotate(-135deg); }
-        .config-list { list-style: none; padding: 0; margin: 0; max-height: 0; transition: max-height 0.4s ease-in-out; overflow-y: auto; }
-        .protocol-group.open .config-list { max-height: 500px; }
-        .config-item { padding: 8px 5px; border-top: 1px solid var(--border-color); display: flex; align-items: center; gap: 10px; }
-        .config-checkbox { flex-shrink: 0; transform: scale(1.2); margin-left: 8px; accent-color: var(--logo-green); }
+        .protocol-header { padding: 15px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; font-weight: bold; }
+        .toggle-icon { transition: transform 0.3s; }
+        .protocol-group.open .toggle-icon { transform: rotate(180deg); }
+        .config-list { list-style: none; padding: 0; margin: 0; max-height: 0; transition: max-height 0.4s ease-in-out; overflow: hidden; }
+        .protocol-group.open .config-list { max-height: 1000px; }
+        .config-item { padding: 10px 5px; border-top: 1px solid var(--border-color); display: flex; align-items: center; gap: 10px; }
+        .config-checkbox { flex-shrink: 0; transform: scale(1.2); accent-color: var(--logo-green); }
         .config-details { flex-grow: 1; text-align: right; overflow: hidden; }
-        .config-details .server { font-weight: bold; font-size: 0.9em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; }
+        .server { font-size: 0.9em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; }
         .ping-result { font-size: 0.85em; }
-        .copy-button-container { display: flex; gap: 6px; }
-        .copy-btn { background-color: #333; border: 1px solid var(--border-color); padding: 5px 8px; border-radius: 5px; cursor: pointer; color: var(--text-color); font-size: 0.85em; }
-        .bottom-links { margin-top: auto; padding: 15px 0; border-top: 1px solid var(--border-color); width: 100%; display: flex; gap: 15px; justify-content: center; flex-shrink: 0; }
-        .bottom-links a { color: #aaa; text-decoration: none; font-size: 0.85em; }
-        .alert { padding: 20px; font-weight: bold; color: var(--logo-red); }
+        .copy-btn { background-color: #3e3e3e; border: 1px solid #555; padding: 5px 10px; border-radius: 5px; cursor: pointer; color: var(--text-color); font-size: 0.85em; }
+        .bottom-links { margin-top: auto; padding-top: 20px; width: 100%; display: flex; gap: 20px; justify-content: center; }
+        .bottom-links a { color: #aaa; text-decoration: none; font-size: 0.9em; }
+        .alert { padding: 20px; color: var(--logo-red); }
+        #qr-modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.85); justify-content: center; align-items: center; }
+        .qr-content { background-color: white; padding: 25px; border-radius: 12px; }
     </style>
 </head>
 <body>
@@ -53,7 +63,7 @@
             <img src="logo.png" alt="V2V Logo">
             <p class="slogan">سپاس هرآنکه خواه یا ناخواه دستی بر این راهک رهایی داشت</p>
         </header>
-        <div class="status-bar" id="status-bar">درحال مقداردهی اولیه...</div>
+        <div class="status-bar" id="status-bar"></div>
         <div class="container">
             <section id="xray-section" class="core-section">
                 <div class="core-header" id="xray-header">هسته Xray</div>
@@ -66,13 +76,19 @@
         </div>
         <footer class="bottom-links">
              <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">ورسل</a>
-             <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir" target="_blank" rel="noopener noreferrer">ابر آروان</a>
+             <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">ابر آروان</a>
              <a href="https://smbcryp.github.io/V2V/" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
         </footer>
     </div>
 
+    <div id="qr-modal">
+        <div class="qr-content" id="qr-code-container"></div>
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/jalaali-js/dist/jalaali.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js" defer></script>
     <script src="index.js"></script>
 </body>
 </html>
+
+
