--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <link rel="apple-touch-icon" href="icon-192.png">
     <link rel="manifest" href="manifest.json">
     <style>
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
         :root {
             --primary-bg: #121212; --secondary-bg: #1e1e1e; --text-color: #e0e0e0;
             --logo-red: #D32F2F; --logo-green: #388E3C; --border-color: #2e2e2e;
@@ -90,5 +93,3 @@
     <script src="index.js"></script>
 </body>
 </html>
-
-
