--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پروژه V2V</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://rapid-scene-1da6.mbrgh87.workers.dev;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' [https://cdn.jsdelivr.net](https://cdn.jsdelivr.net) [https://cdnjs.cloudflare.com](https://cdnjs.cloudflare.com); style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' [https://rapid-scene-1da6.mbrgh87.workers.dev](https://rapid-scene-1da6.mbrgh87.workers.dev);">
     <meta name="theme-color" content="#121212">
     <link rel="apple-touch-icon" href="icon-192.png">
     <link rel="manifest" href="manifest.json">
@@ -17,6 +17,8 @@
             --logo-red: #D32F2F; --logo-green: #388E3C; --border-color: #2e2e2e;
             --action-blue: #007bff; --action-blue-hover: #0056b3; --action-gray: #333;
             --ping-good: #4CAF50; --ping-medium: #FFC107; --ping-bad: #F44336;
+            --toast-bg: linear-gradient(135deg, #34d399, #10b981);
+            --toast-error-bg: linear-gradient(135deg, #f87171, #ef4444);
         }
         body { background-color: var(--primary-bg); color: var(--text-color); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; text-align: center; margin: 0; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
         .main-wrapper { width: 100%; max-width: 700px; padding: 15px; }
@@ -36,10 +38,10 @@
         .loader { width: 16px; height: 16px; border: 2px solid #fff; border-bottom-color: transparent; border-radius: 50%; display: inline-block; animation: rotation 1s linear infinite; }
         @keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         .action-group-title { color: #ccc; font-size: 0.9em; font-weight: bold; text-align: right; margin: 25px 0 10px 0; padding-bottom: 5px; border-bottom: 1px solid var(--border-color); }
-        .action-box { display: flex; justify-content: space-between; align-items: center; background-color: var(--action-gray); padding: 10px; border-radius: 8px; margin-bottom: 10px; }
+        .action-box { display: flex; justify-content: space-between; align-items: center; background-color: var(--action-gray); padding: 10px 15px; border-radius: 8px; margin-bottom: 10px; }
         .action-box-label { font-size: 0.9em; font-weight: 500; }
         .action-box-buttons { display: flex; gap: 8px; }
-        .action-btn-small { background-color: #444; border: 1px solid #555; color: var(--text-color); padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.8em; transition: background-color 0.2s; }
+        .action-btn-small { background-color: #444; border: 1px solid #555; color: var(--text-color); padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.8em; transition: background-color 0.2s; white-space: nowrap;}
         .action-btn-small:hover { background-color: #555; }
         .protocol-group { border-top: 1px solid var(--border-color); }
         .protocol-header { padding: 15px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; font-weight: bold; }
@@ -58,9 +60,13 @@
         .alert { padding: 20px; color: var(--logo-red); }
         #qr-modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.85); justify-content: center; align-items: center; }
         .qr-content { background-color: white; padding: 25px; border-radius: 12px; }
+        .toast { visibility: hidden; min-width: 250px; background: var(--toast-bg); color: #fff; text-align: center; border-radius: 8px; padding: 16px; position: fixed; z-index: 2000; left: 50%; transform: translateX(-50%); bottom: 30px; font-size: 17px; transition: visibility 0.5s, opacity 0.5s, bottom 0.5s; opacity: 0; }
+        .toast.show { visibility: visible; opacity: 1; bottom: 50px; }
+        .toast.error { background: var(--toast-error-bg); }
     </style>
 </head>
 <body>
+    <div id="toast"></div>
     <div class="main-wrapper">
         <header class="header">
             <img src="logo.png" alt="V2V Logo">
@@ -78,9 +84,9 @@
             </section>
         </div>
         <footer class="bottom-links">
-             <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">ورسل</a>
-             <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">ابر آروان</a>
-             <a href="https://smbcryp.github.io/V2V/" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
+             <a href="[https://v2v-vercel.vercel.app/](https://v2v-vercel.vercel.app/)" target="_blank" rel="noopener noreferrer">ورسل</a>
+             <a href="[https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/](https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/)" target="_blank" rel="noopener noreferrer">ابر آروان</a>
+             <a href="[https://smbcryp.github.io/V2V/](https://smbcryp.github.io/V2V/)" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
         </footer>
     </div>
 
@@ -88,8 +94,10 @@
         <div class="qr-content" id="qr-code-container"></div>
     </div>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js" defer></script>
+    <script src="[https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js](https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js)" defer></script>
+    <script src="[https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js](https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js)" defer></script>
     <script src="index.js"></script>
 </body>
 </html>
+
+
