--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پروژه V2V</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' [https://cdn.jsdelivr.net](https://cdn.jsdelivr.net) [https://cdnjs.cloudflare.com](https://cdnjs.cloudflare.com); style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' [https://rapid-scene-1da6.mbrgh87.workers.dev](https://rapid-scene-1da6.mbrgh87.workers.dev);">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://rapid-scene-1da6.mbrgh87.workers.dev;">
     <meta name="theme-color" content="#121212">
     <link rel="apple-touch-icon" href="icon-192.png">
     <link rel="manifest" href="manifest.json">
@@ -84,9 +84,9 @@
             </section>
         </div>
         <footer class="bottom-links">
-             <a href="[https://v2v-vercel.vercel.app/](https://v2v-vercel.vercel.app/)" target="_blank" rel="noopener noreferrer">ورسل</a>
-             <a href="[https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/](https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/)" target="_blank" rel="noopener noreferrer">ابر آروان</a>
-             <a href="[https://smbcryp.github.io/V2V/](https://smbcryp.github.io/V2V/)" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
+             <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">آینه ورسل</a>
+             <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">آینه ابر آروان</a>
+             <a href="https://github.com/SMBCRYP/V2V" target="_blank" rel="noopener noreferrer">کد پروژه در گیت‌هاب</a>
         </footer>
     </div>
 
@@ -94,10 +94,8 @@
         <div class="qr-content" id="qr-code-container"></div>
     </div>
     
-    <script src="[https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js](https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js)" defer></script>
-    <script src="[https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js](https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js)" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js" defer></script>
     <script src="index.js"></script>
 </body>
 </html>
-
-
