--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پروژه V2V</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://rapid-scene-1da6.mbrgh87.workers.dev;">
+    <!-- ✅ تغییر اصلی: CSP برای اجازه دسترسی به منابع داده اصلاح شد -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://rapid-scene-1da6.mbrgh87.workers.dev https://smbcryp.github.io https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir;">
     <meta name="theme-color" content="#121212">
     <link rel="apple-touch-icon" href="icon-192.png">
     <link rel="manifest" href="manifest.json">
@@ -83,10 +84,11 @@
                 <div id="singbox-content-wrapper"><div class="alert">درحال بارگذاری...</div></div>
             </section>
         </div>
+        <!-- ✅ تغییر اصلی: لینک‌ها و عناوین فوتر اصلاح شد -->
         <footer class="bottom-links">
-             <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">آینه ورسل</a>
-             <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">آینه ابر آروان</a>
-             <a href="https://github.com/SMBCRYP/V2V" target="_blank" rel="noopener noreferrer">کد پروژه در گیت‌هاب</a>
+             <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">ورسل</a>
+             <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">ابر آروان</a>
+             <a href="https://smbcryp.github.io/v2v/" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
         </footer>
     </div>
 
@@ -99,3 +101,4 @@
     <script src="index.js"></script>
 </body>
 </html>
+
