--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پروژه V2V</title>
-    <!-- ✅ تغییر اصلی: CSP برای اجازه دسترسی به منابع داده اصلاح شد -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://rapid-scene-1da6.mbrgh87.workers.dev https://smbcryp.github.io https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir;">
+    <!-- CSP برای اجازه دسترسی به منابع داده از تمام میرورها و ورکر تنظیم شده است -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://rapid-scene-1da6.mbrgh87.workers.dev https://smbcryp.github.io https://v2v-vercel.vercel.app https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir;">
     <meta name="theme-color" content="#121212">
     <link rel="apple-touch-icon" href="icon-192.png">
     <link rel="manifest" href="manifest.json">
     <style>
-        *, *::before, *::after {
-            box-sizing: border-box;
-        }
+        *, *::before, *::after { box-sizing: border-box; }
         :root {
             --primary-bg: #121212; --secondary-bg: #1e1e1e; --text-color: #e0e0e0;
             --logo-red: #D32F2F; --logo-green: #388E3C; --border-color: #2e2e2e;
@@ -84,11 +82,10 @@
                 <div id="singbox-content-wrapper"><div class="alert">درحال بارگذاری...</div></div>
             </section>
         </div>
-        <!-- ✅ تغییر اصلی: لینک‌ها و عناوین فوتر اصلاح شد -->
         <footer class="bottom-links">
              <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">ورسل</a>
              <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">ابر آروان</a>
-             <a href="https://smbcryp.github.io/v2v/" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
+             <a href="https://smbcryp.github.io/V2V/" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
         </footer>
     </div>
 
@@ -101,4 +98,5 @@
     <script src="index.js"></script>
 </body>
 </html>
+
 
