--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         .loader { width: 16px; height: 16px; border: 2px solid #666; border-bottom-color: transparent; border-radius: 50%; display: inline-block; animation: rotation 1s linear infinite; }
         @keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         .action-group-title { color: #ccc; font-size: 0.9em; font-weight: bold; text-align: right; margin: 15px 0 10px 0; padding-bottom: 5px; border-bottom: 1px solid var(--border-color); }
-        .action-box { display: flex; justify-content: space-between; align-items: center; background-color: var(--action-gray); padding: 10px 15px; border-radius: 8px; margin-bottom: 10px; }
+        .action-box { display: flex; flex-direction: column; align-items: stretch; gap: 10px; }
+        .action-row { display: flex; justify-content: space-between; align-items: center; background-color: var(--action-gray); padding: 10px 15px; border-radius: 8px; }
         .action-box-label { font-size: 0.9em; font-weight: 500; }
         .action-box-buttons { display: flex; gap: 8px; }
         .action-btn-small { background-color: #444; border: 1px solid #555; color: var(--text-color); padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.8em; transition: background-color 0.2s; white-space: nowrap;}
@@ -54,7 +55,8 @@
         .config-checkbox { flex-shrink: 0; transform: scale(1.2); accent-color: var(--logo-green); }
         .config-details { flex-grow: 1; text-align: right; overflow: hidden; }
         .server { font-size: 0.9em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; }
-        .ping-result { font-size: 0.9em; font-weight: bold; min-width: 120px; text-align: left; white-space: pre; font-family: monospace; }
+        .ping-result-container { display: flex; justify-content: flex-end; align-items: center; gap: 6px; font-family: monospace; font-size: 0.85em; min-height: 1.2em; }
+        .ping-result-item { padding: 2px 5px; border-radius: 4px; background-color: #333; color: #999; }
         .config-actions { display: flex; gap: 5px; }
         .copy-btn { background-color: #3e3e3e; border: 1px solid #555; padding: 5px 10px; border-radius: 5px; cursor: pointer; color: var(--text-color); font-size: 0.85em; }
         .bottom-links { margin-top: auto; padding-top: 20px; width: 100%; display: flex; gap: 20px; justify-content: center; }
