--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         .config-checkbox { flex-shrink: 0; transform: scale(1.2); accent-color: var(--logo-green); }
         .config-details { flex-grow: 1; text-align: right; overflow: hidden; }
         .server { font-size: 0.9em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; }
-        .ping-result-container { display: flex; justify-content: flex-end; align-items: center; gap: 6px; font-family: monospace; font-size: 0.85em; min-height: 1.2em; }
-        .ping-result-item { padding: 2px 5px; border-radius: 4px; background-color: #333; color: #999; }
+        .ping-result-container { display: flex; justify-content: flex-end; align-items: center; gap: 6px; font-family: monospace; font-size: 0.85em; min-height: 1.2em; flex-wrap: wrap; }
+        .ping-result-item { padding: 2px 5px; border-radius: 4px; background-color: #333; color: #999; white-space: nowrap; }
         .config-actions { display: flex; gap: 5px; }
         .copy-btn { background-color: #3e3e3e; border: 1px solid #555; padding: 5px 10px; border-radius: 5px; cursor: pointer; color: var(--text-color); font-size: 0.85em; }
         .bottom-links { margin-top: auto; padding-top: 20px; width: 100%; display: flex; gap: 20px; justify-content: center; }
