--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="apple-touch-icon" href="logo.png">
     <link rel="manifest" href="manifest.json">
     <style>
-        /* CSS شما بدون تغییر */
         *, *::before, *::after { box-sizing: border-box; }
         :root {
             --primary-bg: #121212; --secondary-bg: #1e1e1e; --text-color: #e0e0e0;
@@ -47,7 +46,7 @@
         .toggle-icon { transition: transform 0.3s; }
         .protocol-group.open .toggle-icon { transform: rotate(180deg); }
         .config-list { list-style: none; padding: 0; margin: 0; max-height: 0; transition: max-height 0.4s ease-in-out; overflow: hidden; }
-        .protocol-group.open .config-list { max-height: 2000px; } /* Increased max-height */
+        .protocol-group.open .config-list { max-height: 2000px; }
         .config-item { padding: 10px 5px; border-top: 1px solid var(--border-color); display: flex; align-items: center; gap: 10px; }
         .config-checkbox { flex-shrink: 0; transform: scale(1.2); accent-color: var(--logo-green); }
         .config-details { flex-grow: 1; text-align: right; overflow: hidden; }
